[workspace]
resolver = "3"
members = ["crates/rs9p", "example/unpfs"]
default-members = ["example/unpfs"]

[workspace.dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
nix = { version = "0.30.1", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
