[workspace]
resolver = "3"
members = ["crates/rs9p", "crates/unpfs"]
default-members = ["crates/unpfs"]

[workspace.package]
version = "0.7.0"
edition = "2024"
authors = ["Ryo Munakata (pfpacket) <afpacket@gmail.com>", "Steve Biedermann (hardliner66) <hardliner66@gmail.com>"]
repository = "https://github.com/rs9p/rs9p"
license-file = "LICENSE"
readme = "README.md"
keywords = ["9p", "Plan9", "v9fs", "filesystem", "network"]
categories = ["filesystem", "network-programming"]

[workspace.dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
nix = { version = "0.30.1", features = ["fs"] }
tokio = { version = "1.48.0", features = ["full"] }
rs9p = { path = "crates/rs9p", version = "0.7.0" }

[profile.release]
opt-level = 3
lto = true
