[package]
name = "rs9p"
version = "0.2.0"
edition = "2024"
authors = ["Ryo Munakata (pfpacket) <afpacket@gmail.com>", "Steve Biedermann (hardliner66) <hardliner66@example.com>"]
description = "Filesystems library using 9P2000.L protocol, an extended variant of 9P from Plan 9"
documentation = "https://docs.rs/rs9p"
repository = "https://github.com/rs9p/rs9p"
readme = "../../README.md"
keywords = ["9p", "Plan9", "v9fs", "filesystem", "network"]
categories = ["filesystem", "network-programming"]
license-file = "../../LICENSE"

[lib]
name = "rs9p"
crate-type = ["rlib"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
nix.workspace = true
tokio.workspace = true
enum_primitive = "0.1.1"
bytes = "1.10.1"
tokio-stream = "0.1.17"
bitflags = "2.10.0"
byteorder = "1.5.0"
num-traits = "0.2.19"
log = "0.4.28"
tokio-util = { version = "0.7.16", features = ["codec"] }
