[package]
name = "rs9p"
description = "Filesystems library using 9P2000.L protocol, an extended variant of 9P from Plan 9"
documentation = "https://docs.rs/rs9p"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
nix.workspace = true
tokio.workspace = true
enum_primitive = "0.1.1"
bytes = "1.10.1"
tokio-stream = "0.1.17"
bitflags = "2.10.0"
byteorder = "1.5.0"
num-traits = "0.2.19"
tokio-util = { version = "0.7.16", features = ["codec"] }
tracing = "0.1"
