[package]
name = "unpfs"
description = "An example filesystem built on top of the rs9p library"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
nix = { workspace = true, features = ["fs", "user"] }
tokio.workspace = true
env_logger = "0.11.8"
filetime = "0.2.26"
tokio-stream = { version = "0.1.17", features = ["fs"] }
clap = { version = "4.5.50", features = ["derive"] }
rs9p.workspace = true
