
[package]
name = "unpfs"
version = "0.0.1"
authors = [ "afpacket <afpacket@gmail.com>" ]
edition = "2018"

[[bin]]
name = "unpfs"

[dependencies]
async-trait = "0.1.89"
env_logger = "0.11.8"
filetime = "0.2.26"
futures = "0.3.31"
nix = { version = "0.30.1", features = ["fs", "user"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }

[dependencies.rs9p]
path = "../../"

[profile.release]
opt-level = 3
lto = true
