
[package]
name = "unpfs"
version = "0.0.1"
authors = [ "afpacket <afpacket@gmail.com>", "Steve Biedermann (hardliner66) <hardliner66@example.com>" ]
edition = "2024"
publish = false

[[bin]]
name = "unpfs"

[dependencies]
async-trait.workspace = true
futures.workspace = true
nix = { workspace = true, features = ["fs", "user"] }
tokio.workspace = true
env_logger = "0.11.8"
filetime = "0.2.26"
tokio-stream = { version = "0.1.17", features = ["fs"] }

[dependencies.rs9p]
path = "../../crates/rs9p"
